[package]
name = "analogz"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
itertools = "0.14.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

tempfile = "3.19.1"

[[bench]]
name = "log_buf"
harness = false

[[bench]]
name = "tokenize"
harness = false
