[package]
name = "analogz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "analogz"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.14.0"
num_cpus = "1.17.0"
pyo3 = { version = "0.25.0", features = ["full"] }
rayon = "1.10.0"
regex = "1.11.1"

[dev-dependencies]
rayon = "1.10.0"
