[package]
name = "py-bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "analogz"
crate-type = ["cdylib"]

[dependencies]
analogz = { version = "0.1.0", path = "../core" }
polars = "0.50.0"
pyo3 = { version = "0.25.0", features = ["full"] }
regex = "1.11.2"


[dev-dependencies]
rayon = "1.10.0"
